fix: blog styles on small devices

--- a/packages/website/styles/blog.css
+++ b/packages/website/styles/blog.css
@@ -32,6 +32,51 @@ h6 {
   max-height: var(--card-size);
 }
 
+.blog .highlight-card-buttons {
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+}
+
+.blog .highlight-card-buttons button {
+  width: 100%;
+}
+
+.blog #blog-highlight-subscribe {
+  margin: 1rem 0 0 0;
+}
+
+.blog .blog-card {
+  width: 250px;
+  justify-self: center;
+}
+
+@media screen and (min-width: 375px) {
+  .blog .highlight-card-buttons {
+    flex-direction: row;
+    align-content: center;
+    margin-left: 0.5rem;
+  }
+  .blog .blog-card {
+    width: 300px;
+  }
+  .blog #blog-highlight-subscribe {
+    margin: 0 0 0 2rem;
+  }
+  .blog #blog-highlight-read-more {
+    margin: 0;
+  }
+  .blog .highlight-card-buttons button {
+    width: unset;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .blog .blog-card {
+    width: 400px;
+  }
+}
+
 @media screen and (max-width: 880px) {
   .blog .h-card {
     max-height: auto;
@@ -50,10 +95,6 @@ h6 {
     position: relative;
     overflow: hidden;
   }
-}
-
-.blog .w-card {
-  width: var(--card-size);
 }
 
 .blog .cta {
@@ -346,13 +387,6 @@ h6 {
   }
 
   .blog-tags-buttons {
-    justify-self: center;
-  }
-}
-
-@media screen and (max-width: 460px) {
-  .blog .blog-card {
-    width: 300px;
     justify-self: center;
   }
 }
